# RaytracingFromScratch

./: CMakeLists.txt  main.cpp  objects.h  renderer_math.cpp  renderer_math.h  trace_path.cpp  trace_path.h  trace_ray_simple.cpp  trace_ray_simple.h
